# RAG_Esports_Knowledge_Bot

./: ASSIGNMENTS.md  README.md  REPORT.md  debug_retrieval.txt  guardrails_rag_graph.py  main.py  pyproject.toml  rag_agent.py  requirements.txt
examples/: run_evaluation.py
rag_evaluator/: __init__.py  answer_evaluator.py  llm_judge.py  models.py  search_evaluator.py  utils.py
tests/: test_answer_evaluator.py  test_llm_judge.py  test_project.py  test_search_evaluator.py
