[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-evaluator"
version = "0.1.0"
description = "Typed RAG search, answer, and LLM-as-a-judge evaluation metrics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.3",
    "thefuzz[speedup]>=0.22",
]

[project.optional-dependencies]
llm = ["openai>=1.0"]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["rag_evaluator*"]